adding initial files

--- a/PythonBasicNumericTypes.ipynb
+++ b/PythonBasicNumericTypes.ipynb
@@ -75,9 +75,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9223372036854775807 9223372036854775807\n"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "print(sys.maxsize, 2**63 - 1)"
@@ -126,9 +134,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "maximum float 1.7976931348623157e+308\n",
+      "minimum float 2.2250738585072014e-308\n",
+      "epislon 2.220446049250313e-16\n"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "print(\"maximum float\",sys.float_info.max)\n",
@@ -154,9 +172,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "40.0\n",
+      "40.0\n"
+     ]
+    }
+   ],
    "source": [
     "print(4e1)\n",
     "print(4E1)\n"
@@ -175,9 +202,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.0\n",
+      "5.0\n",
+      "5.0\n"
+     ]
+    }
+   ],
    "source": [
     "print(9/3)\n",
     "print(float(5))\n",
@@ -235,9 +272,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8 <class 'int'>\n",
+      "2 <class 'int'>\n",
+      "15 <class 'int'>\n",
+      "1.6666666666666667 <class 'float'>\n",
+      "2 <class 'int'>\n",
+      "931322574615478515625 <class 'int'>\n",
+      "0.2999999999999998 <class 'float'>\n",
+      "13.5\n",
+      "False\n",
+      "True\n",
+      "5>4 True\n"
+     ]
+    }
+   ],
    "source": [
     "print (5+3,type(5+3))\n",
     "print (5-3,type(5-3))\n",
@@ -255,9 +310,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "keyword can't be an expression (<ipython-input-6-520634867ba7>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-6-520634867ba7>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    print(5=4)\u001b[0m\n\u001b[0m         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m keyword can't be an expression\n"
+     ]
+    }
+   ],
    "source": [
     "print(5=4)"
    ]
@@ -280,9 +344,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7.5\n",
+      "7.5\n"
+     ]
+    }
+   ],
    "source": [
     "print(5*3/2)\n",
     "print(5/2*3)"
@@ -297,9 +370,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8 <class 'int'>\n"
+     ]
+    }
+   ],
    "source": [
     "expr = \"5+3\"\n",
     "print(eval(expr),type(eval(expr)))\n"
@@ -328,9 +409,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6 <class 'int'>\n"
+     ]
+    }
+   ],
    "source": [
     "print(round(5.7),type(round(5.7)))\n"
    ]
@@ -363,26 +452,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1361\n"
+     ]
+    }
+   ],
    "source": [
-    "numeric_quizz1(replace_me_with_the_numeric_answer)"
+    "from  quizzes.numeric_quizzes import *\n",
+    "print(round(((5*3**3-2)**2)/(4*3+1)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'You got the correct answer!'"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "numeric_quizz1(1360.6923076923076)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on built-in function round in module builtins:\n",
+      "\n",
+      "round(...)\n",
+      "    round(number[, ndigits]) -> number\n",
+      "    \n",
+      "    Round a number to a given precision in decimal digits (default 0 digits).\n",
+      "    This returns an int when called with one argument, otherwise the\n",
+      "    same type as the number. ndigits may be negative.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help(round)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -503,9 +632,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([127], dtype=int8)"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "np.array([-129,], dtype=np.int8)"
@@ -522,9 +662,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[-43 -46  -7]\n",
+      " [-34 -21 -13]\n",
+      " [ 10 -40  10]]\n",
+      "******************************************\n",
+      "[[ 26 -32 -48]\n",
+      " [  7   8 -33]\n",
+      " [ 22  42 -24]]\n",
+      "******************************************\n",
+      "[[-33 -25]\n",
+      " [  7  24]]\n"
+     ]
+    }
+   ],
    "source": [
     "A= np.random.randint(-50, 50, size=(3,3), dtype=np.int8)\n",
     "B= np.random.randint(-50, 50, size=(3,3), dtype=np.int16)\n",
@@ -538,27 +695,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[-17 -78 -55]\n",
+      " [-27 -13 -46]\n",
+      " [ 32   2 -14]]\n"
+     ]
+    }
+   ],
    "source": [
     "print(A + B)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[-1118  1472   336]\n",
+      " [ -238  -168   429]\n",
+      " [  220 -1680  -240]]\n"
+     ]
+    }
+   ],
    "source": [
     "print(A*B)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[43, 46,  7],\n",
+       "       [34, 21, 13],\n",
+       "       [10, 40, 10]], dtype=int8)"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "np.abs(A)"
    ]
@@ -605,7 +795,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.5.5"
   }
  },
  "nbformat": 4,
